# dnie-firmador

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/dnie_firmador/: __init__.py
src/dnie_firmador/card/: dnie.py  exceptions.py  reader.py
src/dnie_firmador/signing/: appearance.py  signer.py
src/dnie_firmador/ui/: main_window.py  pdf_viewer.py  pin_dialog.py  sig_config.py
