[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dnie-firmador"
version = "0.1.0"
description = "Sign PDF documents with the Peruvian DNIe on Linux / Firma PDFs con el DNIe peruano en Linux"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Jimmy Fernando Quintanilla Pérez", email = "dlocmot@gmail.com" },
]
keywords = ["dnie", "peru", "pdf", "digital-signature", "pkcs11", "reniec"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security :: Cryptography",
    "Topic :: Office/Business",
]
dependencies = [
    "PyQt6>=6.6",
    "PyMuPDF>=1.24",
    "pyHanko[pkcs11]>=0.22",
    "pyscard>=2.0",
    "cryptography>=42.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.4",
]

[project.scripts]
dnie-firmador = "dnie_firmador.ui.main_window:main"

[project.urls]
Homepage = "https://github.com/dlocmot/dnie-firmador"
Issues = "https://github.com/dlocmot/dnie-firmador/issues"

[tool.ruff]
line-length = 100
target-version = "py311"
